# opencvLinkerTest

./: .gitignore  CMakeLists.txt
.cmake/: policy.cmake
apps/app1/: CMakeLists.txt
lib/opencv/debug/: OpenCVModules-debug.cmake  opencv_calib3d470d.lib  opencv_core470d.lib  opencv_dnn470d.lib  opencv_features2d470d.lib  opencv_flann470d.lib  opencv_gapi470d.lib  opencv_highgui470d.lib  opencv_imgcodecs470d.lib  opencv_imgproc470d.lib  opencv_ml470d.lib  opencv_objdetect470d.lib  opencv_photo470d.lib  opencv_stitching470d.lib  opencv_video470d.lib  opencv_videoio470d.lib
lib/opencv/release/: OpenCVModules-release.cmake  opencv_calib3d470.lib  opencv_core470.lib  opencv_dnn470.lib  opencv_features2d470.lib  opencv_flann470.lib  opencv_gapi470.lib  opencv_highgui470.lib  opencv_imgcodecs470.lib  opencv_imgproc470.lib  opencv_ml470.lib  opencv_objdetect470.lib  opencv_photo470.lib  opencv_stitching470.lib  opencv_video470.lib  opencv_videoio470.lib
modules/module1/: CMakeLists.txt  Helpers.cpp  Helpers.h
